--- a/main.html
+++ b/main.html
@@ -22,6 +22,8 @@
 	   <ol begin="1"> 
 		<li>Add salt to taste.</li>
 		<li>Cook for 10 minutes, stirring occasionally.</li> 
+	   </ol> 
+		   <ol start="3">  
 		<li>Add marinara sauce to a pan, bringing to a simmer.</li>
 		<li>Mix cooked spaghetti with marinara sauce.</li>
 		<li>Enjoy!</li> 
